Fixed img positioning on mobile clear

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ div.layer {
   .main-section {
     top: 50px;
     width: 327px;
-    height: 780px;
+    height: 100%;
   }
 
   #info {
@@ -125,8 +125,8 @@ div.layer {
   }
 
   div#img {
-    left: 0;
-    width: 100%;
+    left: 14px;
+    width: 300px;
     height: 240px;
   }
 }
